# myblog

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  manager.py  pyproject.toml  wsgi.py
myblog/: __init__.py  blog.py  config.py  ext.py  fakes.py  forms.py  models.py  settings.py  utils.py
myblog/blueprints/: admin.py  auth.py  blog.py
myblog/core/: commands.py  ext.py  templating.py
myblog/static/ckeditor/: build-config.js  ckeditor.js  styles.js
myblog/static/ckeditor/lang/: af.js  ar.js  az.js  bg.js  bn.js  bs.js  ca.js  cs.js  cy.js  da.js  de-ch.js  de.js  el.js  en-au.js  en-ca.js  en-gb.js  en.js  eo.js  es-mx.js  es.js  et.js  eu.js  fa.js  fi.js  fo.js  fr-ca.js  fr.js  gl.js  gu.js  he.js  hi.js  hr.js  hu.js  id.js  is.js  it.js  ja.js  ka.js  km.js  ko.js  (+30 more)
myblog/static/ckeditor/samples/js/: sample.js  sf.js
myblog/static/ckeditor/samples/old/assets/uilanguages/: languages.js
myblog/static/ckeditor/samples/old/dialog/assets/: my_dialog.js
myblog/static/ckeditor/skins/moono-lisa/: editor.css  editor_gecko.css  editor_ie.css  editor_ie8.css  editor_iequirks.css
myblog/templates/: base.html
myblog/templates/blog/: _posts.html  _sidebar.html  index.html  post.html
myblog/templates/errors/: 400.html  500.html
tests/: conftest.py  test_db.py  test_factory.py
