[tool.poetry]
name = "myblog"
version = "0.1.0"
description = ""
authors = ["zhou_mfk <zhou_mfk@163.com>"]
readme = "README.md"
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-script = "^2.0.6"
flask-migrate = "^4.0.7"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"
